# src/app/routes/index.ts
@@ -5,6 +5,7 @@ import { ProductRoutes } from "../modules/product/product.route";
 import { CategoryRoutes } from "../modules/category/category.route";
 import { CartRoutes } from "../modules/cart/cart.route";
 import { OrderRoutes } from "../modules/order/order.route";
+import { RentalRoutes } from "../modules/rental/rental.route";
 
 const router = express.Router();
 
@@ -32,6 +33,10 @@ const moduleRoutes = [
   {
     path: "/orders",
     route: OrderRoutes,
+  },
+  {
+    path: "/rentals",
+    route: RentalRoutes,
   },
 ];
 
